fdo#57215: Fixed wrong text rotation in SVG Export

Added text rotation to "non-positioned characters" in SVG Export.

Change-Id: I831644329625fa74e5a2436096d26ec22d8b0319
Reviewed-on: https://gerrit.libreoffice.org/1227
Reviewed-by: Petr Mladek <pmladek@suse.cz>
Tested-by: Petr Mladek <pmladek@suse.cz>